# prodFinalTeam2025

./: .gitignore  .gitlab-ci.yml  README.md  credentials.md  docker-compose.yml  nginx.conf
back/: .example.env  .gitlab-ci.yml  Dockerfile  docker-compose.yml  pyproject.toml
back/alembic/versions/: 2025_02_26_2036-adeed025f926_.py  2025_02_26_2041-7fdea819dd66_.py  2025_02_26_2135-18bc3035b00f_.py  2025_02_26_2221-fec42f2934fd_.py  2025_02_27_2035-5ad084b4433a_.py  2025_02_27_2104-d2abd49ca007_.py  2025_02_27_2256-aad7a41b302b_.py  2025_03_01_1314-094c81f45ee6_.py  2025_03_01_1320-cb3a98e6139a_.py  2025_03_01_1839-5b6828ce36fb_.py  2025_03_02_0906-fd35f778c495_.py  2025_03_02_0928-99986514d6a8_.py  2025_03_02_0959-20c0eddf648e_.py  2025_03_02_1025-126c22095be9_.py  2025_03_02_1422-e2bc11e5680e_.py  2025_03_02_1734-19cc4d319920_.py  2025_03_03_1033-e051d91926be_.py  2025_03_03_1037-35894d222fa0_.py  2025_03_03_1411-3f0ef1ef2c5a_merge_branches.py  2025_03_03_1842-dedee8ce82ce_.py  2025_03_03_2047-5758641627d2_.py
back/src/: main.py
back/src/adapters/: __init__.py  mail.py
back/src/adapters/redis/: __init__.py  client.py
back/src/admin/: __init__.py  auth.py  factory.py  views.py
back/src/api/: __init__.py
back/src/api/v1/: __init__.py  auth.py  book_exchange.py  book_offer.py  users.py  (+1 more)
back/src/auth/: __init__.py  backend_jwt.py  password.py  user_manager.py
back/src/core/: __init__.py  config.py  lifespan.py
back/src/db/: __init__.py  manager.py  user_db.py
back/src/enums/: __init__.py  book_binding.py  book_genre.py  book_size.py  book_state.py
back/src/models/: __init__.py  admin_token.py  base.py  book_exchange.py  book_main_image.py  book_offer.py  point.py  user.py
back/src/repositories/: __init__.py  admin_token.py  book_exchange.py  book_main_image.py  book_offer.py  manager.py  points.py  user.py
back/src/schemas/: __init__.py  book_exchange.py  book_main_image.py  book_offer.py  point.py  user.py
back/src/services/: __init__.py  base.py  book_offer.py  points.py
back/src/utils/: __init__.py  error_example_factory.py  files.py  partial_schema.py
(+44 files in other folders)
